--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "register": "node command.js"
+    "start": "node index.js",
+    "register": "node command.js",
+    "deploy": "gcloud run deploy --project discord-gpt-381901 --source . --region us-central1"
   },
   "author": "",
   "license": "ISC",
