--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "register": "node command.js",
-    "deploy": "gcloud run deploy --project discord-gpt-381901 --source . --region us-central1"
+    "deploy": "gcloud run deploy discord-gpt --project discord-gpt-381901 --source . --region us-central1"
   },
   "author": "",
   "license": "ISC",
