--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "npm run register; node index.js",
     "register": "node command.js",
     "deploy": "gcloud run deploy discord-gpt --project discord-gpt-381901 --source . --region us-central1"
   },
